--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.2",
     "aos": "^2.3.4",
     "astro": "^5.3.0",
     "cors": "^2.8.5",
