--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ EMAIL_SECURE=true
 EMAIL_USER=alecuevas660@gmail.com
 EMAIL_PASSWORD=ggpvelgliwinghbj
 EMAIL_TO=alecuevas660@gmail.com
+NODE_ENV=production
