--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-PORT=${PORT}
+PORT=3000
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_SECURE=true
 EMAIL_USER=alecuevas660@gmail.com
-EMAIL_PASSWORD=ggpvelgliwinghbj
+EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
 EMAIL_TO=alecuevas660@gmail.com
-NODE_ENV=production
+NODE_ENV=production # Cambiar a production
+PUBLIC_API_URL=/contacto/contact
