--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "name": "conecta-astro-app",
-  "type": "commonjs",
+  "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start": "NODE_ENV=production node server/server.js",
+    "deploy": "npm run build && cp .env ../client/dist/"
   },
   "dependencies": {
     "@astrojs/node": "^9.1.2",
+    "@oslojs/encoding": "^1.1.0",
     "aos": "^2.3.4",
     "astro": "^5.3.0",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "cors": "^2.8.5",
+    "cssesc": "^3.0.0",
+    "devalue": "^5.1.1",
     "dotenv": "^16.4.7",
+    "es-module-lexer": "^1.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "html-escaper": "^3.0.3",
+    "kleur": "^4.1.5",
     "nodemailer": "^6.10.0"
+  },
+  "devDependencies": {
+    "terser": "^5.39.0"
   }
 }
