--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ EMAIL_USER=alecuevas660@gmail.com
 EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
 EMAIL_TO=alecuevas660@gmail.com
 NODE_ENV=production # Cambiar a production
-PUBLIC_API_URL=/contacto/contact
+PUBLIC_API_URL=https://conectainternacional.cl/contacto/contact
+HOST=0.0.0.0
