--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=3000
+FRONTEND_URL=http://localhost:4321
+ALLOWED_ORIGINS="https://conectainternacional.cl,https://www.conectainternacional.cl"
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_SECURE=true
@@ -6,5 +8,3 @@ EMAIL_USER=alecuevas660@gmail.com
 EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
 EMAIL_TO=alecuevas660@gmail.com
 NODE_ENV=production # Cambiar a production
-PUBLIC_API_URL=https://conectainternacional.cl/contacto/contact
-HOST=0.0.0.0
