--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conecta-astro-app",
-  "type": "module",
+  "type": "commonjs",
   "version": "0.0.1",
   "scripts": {
     "dev": "NODE_ENV=development astro dev",
@@ -12,8 +12,8 @@
     "test": "echo 'No tests yet'"
   },
   "dependencies": {
-    "@astrojs/node": "^8.1.0",
-    "astro": "^4.0.0",
+    "@astrojs/node": "^9.1.2",
+    "astro": "5.3.0",
     "compression": "^1.7.4", 
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
