--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "conecta-astro-app",
-  "type": "commonjs",
+  "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "NODE_ENV=development astro dev",
     "build": "astro build",
-    "preview": "NODE_ENV=production astro preview",
-    "start": "NODE_ENV=production node server.js",
     "deploy": "npm run build && cp .env.production dist/ && cp -r server dist/",
     "lint": "eslint . --ext .js,.astro",
     "test": "echo 'No tests yet'"
@@ -14,17 +11,18 @@
   "dependencies": {
     "@astrojs/node": "^9.1.2",
     "astro": "5.3.0",
-    "compression": "^1.7.4", 
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0", 
-    "eslint-plugin-import": "^2.29.0", 
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-astro": "^0.29.0",
+    "eslint-plugin-import": "^2.29.0",
     "terser": "^5.26.0"
   }
 }
