--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ EMAIL_SECURE=true
 EMAIL_USER=alecuevas660@gmail.com
 EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
 EMAIL_TO=alecuevas660@gmail.com
+NODE_ENV=production
