--- a/.env
+++ b/.env
@@ -1,7 +1,14 @@
+# Configuración del servidor
+PORT=3000
+NODE_ENV=production # Cambiar a "development" para desarrollo
+
+# Configuración de CORS
+ALLOWED_ORIGINS=https://conectainternacional.cl,https://www.conectainternacional.cl,http://localhost:4321
+
+# Configuración del correo
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_SECURE=true
 EMAIL_USER=alecuevas660@gmail.com
 EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
 EMAIL_TO=alecuevas660@gmail.com
-NODE_ENV=production
