--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "build": "astro build",
-    "deploy": "npm run build && cp .env.production dist/ && cp -r server dist/",
+    "start": "node server.js",
+    "prebuild": "rimraf dist/",
+    "build": "astro build && copyfiles server/**/* dist/ && copyfiles .env.production dist/",
+    "deploy": "npm run build",
     "lint": "eslint . --ext .js,.astro",
     "test": "echo 'No tests yet'"
   },
   "dependencies": {
     "@astrojs/node": "^9.1.2",
-    "astro": "5.3.0",
+    "astro": "^5.3.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "rimraf": "^5.0.5",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
