--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ NODE_ENV=production # Cambiar a "development" para desarrollo
 ALLOWED_ORIGINS=https://conectainternacional.cl,https://www.conectainternacional.cl,http://localhost:4321
 
 # Configuración del correo
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=465
-EMAIL_SECURE=true
-EMAIL_USER=alecuevas660@gmail.com
-EMAIL_PASSWORD=mnfq gbwd ruyz jbxo
-EMAIL_TO=alecuevas660@gmail.com
+EMAIL_HOST=mail.conectainternacional.cl  # o el servidor SMTP que te indique tu hosting
+EMAIL_PORT=465                          # Puerto seguro (común en cPanel)
+EMAIL_SECURE=true                       # SSL habilitado
+EMAIL_USER=conectacontacto@conectainternacional.cl  # Tu cuenta de correo creada en cPanel
+EMAIL_PASSWORD=conecta2025 # Contraseña de la cuenta de correo
+EMAIL_TO=conectacontacto@conectainternacional.cl  # Correo destino
